--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "coffee-script": "^1.7.1",
-    "express": "^4.8.3"
+    "express": "^4.8.3",
+    "jade": "^1.5.0",
+    "stylus": "^0.47.3"
   }
 }
