--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coffee-script": "^1.7.1",
     "express": "^4.8.3",
     "jade": "^1.5.0",
-    "stylus": "^0.47.3"
+    "stylus": "^0.47.3",
+    "coffee-middleware": "^0.2.1"
   }
 }
