--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.8.3",
     "jade": "^1.5.0",
     "stylus": "^0.47.3",
-    "coffee-middleware": "^0.2.1"
+    "coffee-middleware": "^0.2.1",
+    "body-parser": "^1.6.5"
   }
 }
