--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   "author": "jigsaw (http://jgs.me)",
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
+    "body-parser": "^1.6.5",
+    "coffee-middleware": "^0.2.1",
     "coffee-script": "^1.7.1",
     "express": "^4.8.3",
     "jade": "^1.5.0",
-    "stylus": "^0.47.3",
-    "coffee-middleware": "^0.2.1",
-    "body-parser": "^1.6.5",
-    "request": "^2.40.0",
     "mmmagic": "^0.3.8",
     "redis": "^0.12.1",
-    "async": "^0.9.0"
+    "request": "^2.40.0",
+    "socket.io": "^1.0.6",
+    "stylus": "^0.47.3"
   }
 }
