--- a/package.json
+++ b/package.json
@@ -4,22 +4,32 @@
   "description": "gif jockey GJ!!!!",
   "main": "index.coffee",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nf start",
+    "build:styl": "rm -rf build/css; mkdir -p build/css; stylus src/*.styl --out build/css",
+    "build:js": "webpack"
   },
   "author": "jigsaw (http://jgs.me)",
   "license": "MIT",
   "dependencies": {
+    "LiveScript": "^1.3.1",
     "async": "^0.9.0",
-    "body-parser": "^1.6.5",
-    "coffee-middleware": "^0.2.1",
-    "coffee-script": "^1.7.1",
-    "express": "^4.8.3",
     "jade": "^1.5.0",
+    "koa-jade": "^0.3.1",
+    "koa-router": "^4.3.1",
+    "koa-static": "^1.4.9",
+    "koa.io": "0.0.3",
+    "livescript-loader": "^0.1.3",
     "mmmagic": "^0.3.8",
     "redis": "^0.12.1",
     "request": "^2.40.0",
-    "socket.io": "^1.0.6",
     "stylus": "^0.49.3",
-    "twit": "^1.1.18"
+    "twit": "^1.1.18",
+    "vue": "^0.11.5",
+    "vue-loader": "e-jigsaw/vue-loader",
+    "webpack": "^1.7.3"
+  },
+  "devDependencies": {
+    "foreman": "^1.3.0"
   }
 }
