--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "author": "jigsaw (http://jgs.me)",
   "license": "MIT",
   "dependencies": {
-    "async": "^0.9.0",
-    "body-parser": "^1.6.5",
+    "body-parser": "^1.13.1",
     "coffee-middleware": "^0.2.1",
-    "coffee-script": "^1.7.1",
-    "express": "^4.8.3",
-    "jade": "^1.5.0",
-    "mmmagic": "^0.3.8",
+    "coffee-script": "^1.9.3",
+    "express": "^4.12.4",
+    "jade": "^1.11.0",
+    "mmmagic": "^0.3.14",
+    "neo-async": "^1.2.1",
     "redis": "^0.12.1",
-    "request": "^2.40.0",
-    "socket.io": "^1.0.6",
-    "stylus": "^0.49.3",
-    "twit": "^1.1.18"
+    "request": "^2.58.0",
+    "socket.io": "^1.3.5",
+    "stylus": "^0.51.1",
+    "twit": "^1.1.20"
   }
 }
