--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "gif jockey GJ!!!!",
   "main": "index.coffee",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "make all"
   },
   "author": "jigsaw (http://jgs.me)",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.1",
-    "coffee-middleware": "^0.2.1",
     "coffee-script": "^1.9.3",
     "express": "^4.12.4",
     "jade": "^1.11.0",
